# Instant-Spatial-3D

./: .gitignore  AGENTS.md  README.md  environment.ml.yml  environment.yml  pyproject.toml
clients/android/: README.md
clients/ios/: README.md
clients/web/: README.md
clients/web/shaders/: gaussian_splat.wgsl
configs/: is3d_v0.yaml
is3d/: cli.py  config.py  pipeline.py  types.py
is3d/exporters/: __init__.py  navmesh.py  ply.py  scene_meta.py
is3d/math/: __init__.py  quaternion.py
is3d/models/: __init__.py  completion.py  fastvit.py  runtime.py  triplane.py
is3d/stages/: __init__.py  completion.py  depth_scale.py  gaussian_regression.py  perception.py
scripts/: bootstrap_conda.sh  bootstrap_conda_ml.sh
tests/: test_config_model_runtime.py  test_pipeline_smoke.py  test_quaternion.py
